--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     </a>
                 </li>
                 <li class="input">
-                    <input type="text" placeholder="write your message..." >
+                    <input type="text" placeholder="Write your message..." >
                 </li>                
                 <li>
                     <a href="#">
